删掉导出功能+增加查看日记功能

--- a/dailymood/app.json
+++ b/dailymood/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/home/home",
     "pages/report/report",
-    "pages/edit/edit"
+    "pages/edit/edit",
+    "pages/dairy/dairy"
   ],
   "window": {
     "navigationBarBackgroundColor": "#FFA296"
