--- a/project.config.json
+++ b/project.config.json
@@ -58,6 +58,13 @@
 					"pathName": "pages/report/report",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/dairy/dairy",
+					"pathName": "pages/dairy/dairy",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
